fixed zoom on mobile video widths

--- a/src/containers/PageBuilder/BlockBuilder/BlockDefault/BlockDefault.module.css
+++ b/src/containers/PageBuilder/BlockBuilder/BlockDefault/BlockDefault.module.css
@@ -86,10 +86,21 @@
 }
 
 .artistSectionText {
-  margin-left: 200px; /* Ajusta este valor según necesites */
+  margin-left: 17vw; /* Ajusta este valor según necesites */
+}
+
+.video {
+  width: 400px;
+  height: 400px;
 }
 @media (max-width: 950px) {
   .artistSectionText {
     margin-left: 10px; /* Margen más pequeño en móviles */
   }
+  .video {
+    width: 300px;
+    height: 300px;
+  }
 }
+
+
